--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
         <div class="calculator">
             <div class="result">
                 <div class="history">
-                    <p class="val-history" id="history-value">9*9 </p>
+                    <p class="val-history" id="history-value"> </p>
                 </div>
                 <div class="output">
-                    <p class="val-result" id="output-value">81</p>
+                    <p class="val-result" id="output-value"></p>
                 </div>
             </div>
             <div class="keyboard">
